--- a/quizApp/index.css
+++ b/quizApp/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -14,44 +14,57 @@ body {
     margin: 0;
     min-height: 100vh;
 }
- 
-.quiz-container{
+
+.quiz-container {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
-    width: 400px;
+    overflow: hidden;
+    width: 600px;
+    max-width: 100%;
 }
+
 .quiz-header {
     padding: 4rem;
 }
-h2
-{
+
+h2 {
+    padding: 1rem;
+    text-align: center;
     margin: 0;
 }
-ul
-{
+
+ul {
     list-style-type: none;
     padding: 0;
 }
-ul li{
-    font-size: 1.1rem;
+
+ul li {
+    font-size: 1.2rem;
     margin: 1rem 0;
 }
+
 ul li label {
     cursor: pointer;
 }
-button{
+
+button {
     background-color: #8e44ad;
     border: none;
-    font-size: 1.1rem;
     color: white;
-    font-family: inherit;
-    display: block;
-    width: 100%;
-    padding: 1rem;
     cursor: pointer;
+    display: block;
+    font-family: inherit;
+    font-size: 1.1rem;
+    width: 100%;
+    padding: 1.3rem;
 }
 
-button:hover{
+button:hover {
     background-color: #732d91;
+}
+
+button:focus {
+    background-color: #5e3370;
+    outline: none;
 }
